# Trinity-RFT

./: .gitignore  AGENTS.md  README.md  README_zh.md  pip_list.txt  pyproject.toml
.claude/skills/verl-upgrade/: SKILL.md
.codex/: AGENTS.md
.github/instructions/: verl-upgrade.instructions.md
.github/workflows/: unittest.yaml
.github/workflows/docker/: docker-compose.yaml
benchmark/: bench.py
docs/: README.md
docs/agents/: README.md
docs/agents/verl_upgrade/: verl_upgrade_checklist.md
examples/mix_chord/: get_openr1_data.py  mix_chord.yaml
scripts/docker/: Dockerfile.uv
scripts/migrate_from_verl/: init_migration.py
tests/buffer/: formatter_test.py
tests/common/: vllm_test.py
tests/explorer/: scheduler_test.py
tests/template/: config.yaml
tests/trainer/: trainer_test.py
trinity/: __init__.py
trinity/buffer/reader/: file_reader.py
trinity/common/models/: model.py  tinker_model.py  utils.py  vllm_model.py  vllm_worker.py
trinity/common/models/vllm_patch/: worker_patch.py
trinity/common/patch/: qwen3_5.py
trinity/service/data_juicer/server/: utils.py
trinity/trainer/verl/: dp_actor.py  fsdp_checkpoint_manager.py  fsdp_workers.py  megatron_actor.py  megatron_checkpoint_manager.py  megatron_workers.py  monkey_patch.py  utils.py  verl_config.py  verl_trainer.py
